--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
                 <li><a class="menu-item" href="#">Sushi</a></li>
             </ul>
         </div>
+        
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
 
     </div>
 </nav>
