--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
             <a class="navbar-brand" href="#">Food, LLC</a>
         </div>
 
-        <div class="collapse" id="myNavbar">
+<!--         <div class="collapse" id="myNavbar">
             <ul class="nav navbar-nav visible-xs">
                 <li><a class="menu-item" href="#">Chicken</a></li>
                 <li><a class="menu-item" href="#">Beef</a></li>
                 <li><a class="menu-item" href="#">Sushi</a></li>
             </ul>
-        </div>
+        </div> -->
         
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            <span class="icon-bar"> Chicken</span>
+            <span class="icon-bar">Beef</span>
+            <span class="icon-bar">Sushi</span>
           </button>
 
     </div>
