--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </ul>
         </div> -->
         
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="true">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"> Chicken</span>
             <span class="icon-bar">Beef</span>
