--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <div class="container-fluid">
 
         <div class="navbar-header">
-<!--             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
-            </button> -->
+            </button>
             <a class="navbar-brand" href="#">Food, LLC</a>
         </div>
 
