--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
  
         
-             <div id="collapsable-nav" class="collapse navbar-collapse">
+<!--              <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li>
               <a href="menu-categories.html">
@@ -55,7 +55,7 @@
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
-
+ -->
     </div>
 </nav>
 
