--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <span class="icon-bar"> </span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
+         <a class="navbar-brand" href="#">Food, LLC</a>
           </button>
         </div>
 
